Fix header z-index

--- a/src/app/components/game-section/game-section.css
+++ b/src/app/components/game-section/game-section.css
@@ -74,20 +74,20 @@ body {
 .cards-wrapper {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, minmax(70px, 200px));
-  gap: 32px 48px;
+  grid-template-columns: repeat(2, minmax(40px, 200px));
+  gap: 16px 60px;
   max-width: 1100px;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
   margin: 0 auto;
-  min-width: 260px;
+  min-width: 230px;
 }
 
 .card {
   position: relative;
   width: 100%;
-  border-radius: 20px;
+  border-radius: 10px;
   perspective: 3000px;
   cursor: pointer;
 }
@@ -98,14 +98,14 @@ body {
   transform-style: preserve-3d;
   transition: transform 0.6s;
   box-shadow: 0px 9px 15px 0px rgba(22, 28, 34, 0.25);
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .card__content__front, .card__content__back {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .card__content__front {
   background-color: var(--cards-background-color);
@@ -120,7 +120,7 @@ body {
   height: 100%;
   object-fit: cover;
   backface-visibility: hidden;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .card--flipped .card__content {
   transform: rotateY(180deg);
@@ -144,8 +144,20 @@ body {
 
 @media (min-width: 750px) {
   .cards-wrapper {
-    grid-template-columns: repeat(4, minmax(80px, 1fr)); /* 4 columns for wider screens */
+    grid-template-columns: repeat(4, minmax(40px, 1fr));
     gap: 32px;
+    padding: 0 28px 0 36px;
+  }
+}
+@media (max-width: 450px) {
+  .cards-wrapper {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(60px, 200px));
+    gap: 18px 72px;
+    margin: 0 auto;
+    padding: 0 28px 0 36px;
+    min-width: 230px;
   }
 }
 * {
