--- a/src/style.scss
+++ b/src/style.scss
@@ -18,7 +18,6 @@
   grid-area: header;
   position: sticky;
   top: 0;
-  z-index: 1000;
 }
 
 .sidebar {
@@ -31,6 +30,8 @@
 .main {
   grid-area: main;
   background-color: var(--line-top-color);
+  overflow-y: auto;
+  height: 100%;
 }
 
 .toggle-sidebar {
